--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: Swatinem/rust-cache@v1
       - uses: raviqqe/enable-homebrew@main
       - run: brew install pen-lang/pen/pen
       - run: pen build
@@ -16,6 +17,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
+      - uses: Swatinem/rust-cache@v1
       - uses: raviqqe/enable-homebrew@main
       - run: brew install pen-lang/pen/pen
       - run: pen test
