--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
-      - uses: raviqqe/enable-homebrew@main
+      - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install pen-lang/pen/pen
       - run: pen build
   test:
@@ -18,14 +18,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
-      - uses: raviqqe/enable-homebrew@main
+      - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install pen-lang/pen/pen
       - run: pen test
   format:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: raviqqe/enable-homebrew@main
+      - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install pen-lang/pen/pen
       - run: pen format --check
   spell_check:
